--- a/Midsemsamplepaper.qmd
+++ b/Midsemsamplepaper.qmd
@@ -633,3 +633,42 @@ Reduce biases from unequal response rates across demographic groups
 Compare your sample to known population characteristics to verify representativeness
 Use as control variables in regression models to improve precision of estimates
 Create meaningful subgroup analyses for targeted policy recommendations
+
+
+Why This Matters
+Auxiliary variables help reduce sampling variance, improve representativeness, and address issues like nonresponse or noncoverage bias.
+Prioritize variables that are strongly correlated with your survey outcomes (e.g., private health insurance coverage) and are reliably available from the vendor.
+By strategically using auxiliary information, you can enhance the accuracy and efficiency of your survey design while staying within budget.
+
+
+## g. For the overall sample, there is budget available for the selection of 30 block groups. Proportionately allocate the block groups to be sampled from each of the five counties (strata) defining the target population below. You should round your answers in a way that maintains the total sample size of 30 block groups. County Number of Block Groups Number of Housing Units Wayne 250 900,000 Washtenaw 50 180,000 Oakland 150 600,000 Livingston 25 90,000 Genesee 45 200,000
+
+Step 1: Find the total number of block groups in the population
+Add up all block groups across the five counties:
+
+Total = 250 + 50 + 150 + 25 + 45 = 520 block groups
+
+Step 2: Calculate the proportion of block groups in each county
+Wayne: 250 ÷ 520 = 0.481 (48.1%)
+Washtenaw: 50 ÷ 520 = 0.096 (9.6%)
+Oakland: 150 ÷ 520 = 0.288 (28.8%)
+Livingston: 25 ÷ 520 = 0.048 (4.8%)
+Genesee: 45 ÷ 520 = 0.087 (8.7%)
+Step 3: Calculate the number of block groups to sample from each county
+Multiply each proportion by the total sample size (30):
+
+Wayne: 0.481 × 30 = 14.43
+Washtenaw: 0.096 × 30 = 2.88
+Oakland: 0.288 × 30 = 8.64
+Livingston: 0.048 × 30 = 1.44
+Genesee: 0.087 × 30 = 2.61
+
+Step 4: Round to whole numbers while maintaining total sample size
+Wayne: 14.43 → 14
+Washtenaw: 2.88 → 3
+Oakland: 8.64 → 9
+Livingston: 1.44 → 1
+Genesee: 2.61 → 3
+Step 5: Verify the total equals 30
+14 + 3 + 9 + 1 + 3 = 30
+
