midsem paper done

--- a/Midsemsamplepaper.qmd
+++ b/Midsemsamplepaper.qmd
@@ -672,3 +672,100 @@ Genesee: 2.61 → 3
 Step 5: Verify the total equals 30
 14 + 3 + 9 + 1 + 3 = 30
 
+## h. What is your proposed sampling error estimation plan for data analysts based on this allocation in the previous answer (g)
+
+1. Recognize the Design Structure
+Our sample has a stratified design with:
+
+5 counties (strata): Wayne, Washtenaw, Oakland, Livingston, and Genesee
+30 block groups selected proportionally across these counties
+Block groups are the primary sampling units (PSUs)
+
+
+
+Step 2: Use Stratified Variance Estimation Formulas
+For estimating the population mean or proportion, use variance formulas specific to stratified sampling:
+
+Variance of Population Mean ($\hat{\bar{y}}_{str}$):
+
+$$v(\hat{\bar{y}}{str}) = \sum{h=1}^{H} W_h^2 \cdot \frac{1-f_h}{n_h} \cdot s_h^2$$
+
+Where:
+
+$H$ = Number of strata (5 counties)
+$W_h = N_h/N$ = Weight of stratum $h$, based on the proportion of total block groups in stratum $h$
+$N_h$ = Total block groups in stratum $h$
+$N$ = Total block groups across all strata (520)
+$n_h$ = Number of sampled block groups in stratum $h$ (Wayne = 14, Washtenaw = 3, Oakland = 9, Livingston = 1, Genesee = 3)
+$f_h = n_h/N_h$ = Sampling fraction within stratum $h$
+$s_h^2$ = Sample variance within stratum $h$, calculated from survey data
+
+For means and proportions, use stratified sampling variance formulas:
+Var(estimate) = Sum across strata [ Weight²ₕ × (1-fₕ) × Variance within stratum ÷ nₕ ]
+
+Where:
+Weight₍ₕ₎ = Number of block groups in county h ÷ Total block groups (520)
+f₍ₕ₎ = Sampling fraction in county h (number selected ÷ total in county)
+n₍ₕ₎ = Number of block groups sampled in county h
+
+
+
+Step 3: Calculate Within-Stratum Variances
+Compute the sample variance ($s_h^2$) for each variable of interest within each county using data collected from sampled block groups. These variances are crucial for estimating overall sampling error.
+
+Step 4: Apply Finite Population Correction (FPC)
+Include the term $(1-f_h)$ to adjust for the finite population size within each stratum. This is particularly important for strata where the sampling fraction is substantial.
+
+Step 5: Determine Degrees of Freedom
+For confidence intervals, approximate degrees of freedom as:
+
+$$df = \sum_{h=1}^{H} (n_h-1)$$
+
+Using your allocation:
+
+Wayne: $14-1=13$
+Washtenaw: $3-1=2$
+Oakland: $9-1=8$
+Livingston: $1-1=0$
+Genesee: $3-1=2$
+Total degrees of freedom: $df = 13+2+8+0+2=25$
+
+Use approximately 25 degrees of freedom (sum of n₍ₕ₎-1 across counties)
+For 95% confidence intervals, use t-distribution critical values rather than normal distribution
+
+The proportional allocation used (Wayne: 14, Washtenaw: 3, Oakland: 9, Livingston: 1, Genesee: 3)
+How to properly account for this design in their analyses
+Why ignoring the design would lead to incorrect confidence intervals and p-values
+
+Step 6: Use Statistical Software
+Recommend analysts use software designed for complex survey designs (e.g., R's survey package, SAS PROC SURVEY procedures, or Stata svy commands). When specifying the design, include:
+
+Strata variables (counties)
+PSU variables (block groups)
+Any sampling weights (if applicable)
+Example R code:
+
+```{r}
+library(survey)
+survey_design <- svydesign(
+  id = ~block_group_id,
+  strata = ~county,
+  weights = ~weight,
+  data = survey_data,
+  fpc = ~fpc
+)
+
+# Estimate proportion with insurance
+svymean(~has_insurance, survey_design)
+```
+
+
+Step 7: Weighting Considerations
+If analysis focuses on housing units or individuals within block groups, weights may be necessary to account for differences in housing unit counts across sampled block groups. The basic sampling weight would be:
+
+$$w_h = \frac{N_h}{n_h}$$
+
+For multi-stage designs with subsampling of housing units within block groups, additional weight adjustments would be needed.
+
+
+
